[package]
name = "protonctl-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.29.1", features = ["rayon"] }
env_logger = "0.11.5"
# egui-glow currently causes a crash on systems using nvidia drivers so we need to use wgpu https://github.com/emilk/egui/issues/3962
eframe = { version = "0.29.1", features = ["wgpu"] }
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
homedir = { version = "0.3.4" }
thiserror = { version = "2.0.3" }
